force-app/main/default/objects/AreaCode__c/AreaCode__c.object-meta.xml
<CustomObject>
    <label>Area Code</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Area Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Area Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>