force-app/main/default/objects/AreaCode__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The state this area code is in. If it is in more than one state, the most state with the most zip codes will be listed first.</inlineHelpText>
    <label>State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>