force-app/main/default/objects/AreaCode__c/fields/TimeZoneAbbrev__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneAbbrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The abbreviation for the time zone</inlineHelpText>
    <label>Time Zone Abbrev</label>
    <length>10</length>
    <type>Text</type>
</CustomField>