force-app/main/default/objects/AreaCode__c/fields/TimeZoneName__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Time Zone this area code is part of. If part of more than one time zone, the one with the most zip codes will be listed.</inlineHelpText>
    <label>Time Zone Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>