force-app/main/default/objects/AreaCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>TimeZoneAbbrev__c</columns>
    <columns>TimeZoneName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>